--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "no-undef": "error" // Additional, per-project rules...
-  }
+  "extends": ["next/core-web-vitals", "eslint:recommended"]
 }
