--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
